# agenticqa

./: .gitignore  DEMO.md  Makefile  README.md
backend/: .env.example  pyproject.toml
backend/agenticqa/: anthropic_client.py  config.py  main.py  models.py  store.py
backend/agenticqa/adapters/: __init__.py  docs_adapter.py  gitlab_adapter.py  jira_adapter.py  repo_adapter.py
backend/agenticqa/agent/: bdd.py  mocks.py  playwright_gen.py  prompts.py  re_run.py  regression.py  synthesize.py  triage.py
backend/agenticqa/api/: builds.py  runs.py
backend/agenticqa/fixtures/: repo_summary.md
backend/agenticqa/fixtures/artifacts/: bdd.json  playwright.json  re_run.json  regression.json  synthesis.json  triage.json
backend/agenticqa/fixtures/docs/: hld.md  lld.md
backend/agenticqa/fixtures/jira/: PROJ-123.json  PROJ-124.json
backend/tests/: test_smoke.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.node.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: AgentConstellation.tsx  ApprovalBar.tsx  ArchitectureDiagram.tsx  ArtifactViewer.tsx  EmptyState.tsx  KpiCard.tsx  LiveIndicator.tsx  MockedChip.tsx  NewRunWizard.tsx  PipelineStrip.tsx  StatusDot.tsx  StatusPill.tsx
frontend/src/hooks/: useApi.ts
frontend/src/layouts/: AppShell.tsx
frontend/src/lib/: agents.ts  api.ts  format.ts  mock.ts  stage.ts  types.ts
frontend/src/pages/: Agents.tsx  Dashboard.tsx  Environments.tsx  HowItWorks.tsx  Knowledge.tsx  RunDetail.tsx  (+3 more)
(+11 files in other folders)
